--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "execa": "^6.1.0",
     "figlet": "^1.5.2",
-    "listr": "^0.14.3"
+    "inquirer": "^9.0.1",
+    "listr2": "^4.0.5",
+    "open": "^8.4.0"
   }
 }
