--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "run": "node ."
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "enquirer": "^2.3.6",
     "execa": "^6.1.0",
     "figlet": "^1.5.2",
-    "inquirer": "^9.0.1",
     "listr2": "^4.0.5",
     "open": "^8.4.0"
   }
