--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "enquirer": "^2.3.6",
+    "chalk": "^5.0.1",
     "execa": "^6.1.0",
     "figlet": "^1.5.2",
-    "listr2": "^4.0.5",
-    "open": "^8.4.0"
+    "gradient-string": "^2.0.1",
+    "inquirer": "^9.0.2",
+    "ora": "^6.1.2"
   }
 }
